# zaeem-pos

./: .gitignore  AGENTS.md  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: CLOUD_AND_LICENSING_PLAN.md  DESIGN_V3.md  DRIFT_REPORT.md  FEATURE_TRUTH.md  PROGRESS.md  color-palette.md  design.md  supabase-integration-your-schema.md  zaeem-sprints.md
docs/plans/: SCHEMA_V3.md  T1.0a_COMMAND_INVENTORY.md  T2.0_SUPPLIER_LICENSE_DASHBOARD_LOYALTY.md
docs/sprints/: SPRINT_00_truth_and_hardening.md  SPRINT_01_trust_boundary_v2.md  SPRINT_02_resilience_and_marketpacks_v2.md
scripts/: check-no-country-in-core.sh  check-no-sql-in-frontend.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_reconcile.sql  0003_schema_v2.sql
src-tauri/src/: audit.rs  commands_v3.rs  hlc.rs  lib.rs  migrate.rs  migrate_v3.rs  money.rs  obslog.rs  photos.rs  pricing.rs  repo.rs  security.rs  sync.rs
src-tauri/src/ai/: commands.rs  mock.rs  mod.rs  null.rs  queue.rs
src-tauri/src/license/: b64.rs  cloud.rs  fingerprint.rs  mod.rs  signed.rs  store.rs
src-tauri/tests/: chaos.rs
src/components/: CredentialsModal.tsx  LicenseBanner.tsx  LoginPage.tsx  MenuGrid.tsx  PaymentModal.tsx  SessionExpiredOverlay.tsx  SetupWizard.tsx  SplashScreen.tsx
src/db/: audit.ts  corruption.ts  index.ts  migrations.ts  schema.sql  tauri-dialect.ts  types.ts
src/hooks/: useCurrency.ts  useDiscountCap.ts  useKeyboardShortcuts.ts  useMenuItemPhoto.ts  usePermissions.ts
src/kds/: App.tsx
(+81 files in other folders)
