[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
# Adding src/bin/license_signer.rs gave this crate two binaries, so bare
# `cargo run` (what `tauri dev` invokes) could no longer infer which one to
# run. `license_signer` stays reachable via `cargo run --bin license_signer`.
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31", features = ["bundled", "trace"] }
uuid = { version = "1", features = ["v4", "v7"] }
chrono = "0.4"
bcrypt = "0.15"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
rand = "0.8"
tokio = { version = "1.53.0", features = ["time"] }
license-core = { path = "../../../packages/license-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.53.0", features = ["time", "macros", "rt-multi-thread"] }
